複数件の住所がヒットした場合の対応 #4